Added auth inside swagger
