# app/Http/Controllers/Swagger/MainController.php
@@ -11,7 +11,15 @@ use Illuminate\Http\Request;
  *  ),
  *  @OA\PathItem(
  *      path="/api/"
- * )
+ *  ),
+ * 
+ *  @OA\Compontents(
+ *      @OA\SecurityScheme(
+ *          securityScheme="bearerAuth",
+ *          type="http",
+ *          scheme="bearer"
+ *      )
+ *  )
  */
 class MainController extends Controller
 {
